--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
-  <title>Web ZEFFY</title>
+  <meta charset="UTF-8">
+  <title>Apalu.com</title>
+  <style>
+    body {
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #000; /* warna background */
+      color: #fff; /* warna tulisan */
+      font-family: Arial, sans-serif;
+      font-size: 60px;
+    }
+  </style>
 </head>
 <body>
-  <h1>Halo, ini web ZEFFY</h1>
+  APASIH
 </body>
 </html>
